--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -9,7 +9,7 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-  - host: nodejs-app.local
+  - host: nodejs-app.local.com
     http:
       paths:
       - path: /
